--- a/samples/project/windows/nim_http_test/nim_http_test.vcxproj
+++ b/samples/project/windows/nim_http_test/nim_http_test.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{86DF1410-AADE-4192-8674-5D26F881706F}</ProjectGuid>
+    <ProjectGuid>{FC6DA6CD-A3B4-4CEB-B405-1C9E587E214C}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>test</RootNamespace>
+    <RootNamespace>nimhttptest</RootNamespace>
     <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
-    <ProjectName>nim_log_test</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -97,16 +96,17 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX;COMPONENT_BUILD;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;NET_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;NOMINMAX;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
+      <AdditionalOptions>/Zc:strictStrings %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;tinySAK.lib;tinyNET.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party/doubanguo/tinyNET/prebuild/windows/x86/;$(ProjectDir)../../../../third_party/doubanguo/tinySAK/prebuild/windows/x86/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party\openssl\prebuild\windows\x86\;$(ProjectDir)../../../../third_party/curl/prebuild/windows/x86/;$(ProjectDir)../../../../third_party\libuv\prebuild\windows\x86\;$(ProjectDir)../../../../third_party\zlib\prebuild\windows\x86\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;libcryptod.lib;libssld.lib;libcurld.lib;libuv.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -115,16 +115,16 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX;COMPONENT_BUILD;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;NET_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;tinySAK.lib;tinyNET.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party/doubanguo/tinyNET/prebuild/windows/x64/;$(ProjectDir)../../../../third_party/doubanguo/tinySAK/prebuild/windows/x64/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;libcryptod.lib;libssld.lib;libcurld.lib;libuv.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party\openssl\prebuild\windows\x64\;$(ProjectDir)../../../../third_party/curl/prebuild/windows/x64/;$(ProjectDir)../../../../third_party\libuv\prebuild\windows\x64\;$(ProjectDir)../../../../third_party\zlib\prebuild\windows\x64\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -135,18 +135,18 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX;COMPONENT_BUILD;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;NET_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;tinySAK.lib;tinyNET.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party/doubanguo/tinyNET/prebuild/windows/x86/;$(ProjectDir)../../../../third_party/doubanguo/tinySAK/prebuild/windows/x86/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;libcrypto.lib;libssl.lib;libcurl.lib;libuv.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party\openssl\prebuild\windows\x86\;$(ProjectDir)../../../../third_party/curl/prebuild/windows/x86/;$(ProjectDir)../../../../third_party\libuv\prebuild\windows\x86\;$(ProjectDir)../../../../third_party\zlib\prebuild\windows\x86\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -157,25 +157,26 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX;COMPONENT_BUILD;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;NET_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;NOMINMAX;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../;$(ProjectDir)../../../../phoenix/;$(ProjectDir)../../../../phoenix/build/;$(ProjectDir)../../../../phoenix/base/;$(ProjectDir)../../../../phoenix/network/;$(ProjectDir)../../../../phoenix/comm/;$(ProjectDir)../../../../phoenix/base/google_base/;$(ProjectDir)../../../../phoenix/network/google_net/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;tinySAK.lib;tinyNET.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party/doubanguo/tinyNET/prebuild/windows/x64/;$(ProjectDir)../../../../third_party/doubanguo/tinySAK/prebuild/windows/x64/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Crypt32.lib;WS2_32.lib;dbghelp.lib;version.lib;Psapi.lib;Iphlpapi.lib;Userenv.lib;libcrypto.lib;libssl.lib;zlib.lib;libcurl.lib;libuv.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)../../../../third_party\openssl\prebuild\windows\x64\;$(ProjectDir)../../../../third_party/curl/prebuild/windows/x64/;$(ProjectDir)../../../../third_party\libuv\prebuild\windows\x64\;$(ProjectDir)../../../../third_party\zlib\prebuild\windows\x64\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="multipart_form.cpp" />
+    <ClCompile Include="nim_http_test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="testlog.h" />
+    <ClInclude Include="multipart_form.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\project\windows\base\extension\extension.vcxproj">
@@ -190,8 +191,8 @@
     <ProjectReference Include="..\..\..\..\project\windows\comm\nim_log\nim_log.vcxproj">
       <Project>{39eaa991-100a-4a11-953c-be265273da42}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\project\windows\network\google_net\google_net.vcxproj">
-      <Project>{4da564d0-6dc8-42c7-a078-7a9eff695d57}</Project>
+    <ProjectReference Include="..\..\..\..\project\windows\network\proxy_config\proxy_config.vcxproj">
+      <Project>{34a8315a-d8fc-4854-85f2-7f5e851281be}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
