--- a/myprojects/json2sqlite/json2sqlite.vcxproj
+++ b/myprojects/json2sqlite/json2sqlite.vcxproj
@@ -104,12 +104,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;NET_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../.;$(ProjectDir)../../phoenix/;$(ProjectDir)../../phoenix/build/;$(ProjectDir)../../.phoenix/base/;$(ProjectDir)../../phoenix/base/google_base/;$(ProjectDir)../../phoenix/comm/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)../../.;$(ProjectDir)../../phoenix/;$(ProjectDir)../../phoenix/build/;$(ProjectDir)../../phoenix/base/;$(ProjectDir)../../phoenix/base/google_base/;$(ProjectDir)../../phoenix/comm/;$(ProjectDir)../../third_party/gflags/include/;$(ProjectDir)../../third_party/spdlog/include;$(ProjectDir)../../third_party/nlohmann-json/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>WS2_32.lib;dbghelp.lib;version.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>WS2_32.lib;dbghelp.lib;version.lib;shlwapi.lib;gflags_static_debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)../../third_party/gflags/lib/Debug/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -150,13 +151,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main_application.h" />
+    <ClInclude Include="app\main_application.h" />
+    <ClInclude Include="log\mylog.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="app\main_application.cpp" />
     <ClCompile Include="json2sqlite.cpp" />
-    <ClCompile Include="main_application.cpp" />
+    <ClCompile Include="log\mylog.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
