--- a/myprojects/json2sqlite/json2sqlite.vcxproj
+++ b/myprojects/json2sqlite/json2sqlite.vcxproj
@@ -104,13 +104,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;NOMINMAX;BUILDING_LIBCURL;HTTP_IMPLEMENTATION;BASE_IMPLEMENTATION;NET_IMPLEMENTATION;EXTENSION_IMPLEMENTATION;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)../../.;$(ProjectDir)../../phoenix/;$(ProjectDir)../../phoenix/build/;$(ProjectDir)../../phoenix/base/;$(ProjectDir)../../phoenix/base/google_base/;$(ProjectDir)../../phoenix/comm/;$(ProjectDir)../../third_party/gflags/include/;$(ProjectDir)../../third_party/spdlog/include;$(ProjectDir)../../third_party/nlohmann-json/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)../../.;$(ProjectDir)../../phoenix/;$(ProjectDir)../../phoenix/build/;$(ProjectDir)../../phoenix/base/;$(ProjectDir)../../phoenix/base/google_base/;$(ProjectDir)../../phoenix/comm/;$(ProjectDir)../../third_party/gflags/include/;$(ProjectDir)../../third_party/spdlog/include;$(ProjectDir)../../third_party/nlohmann-json/include;$(ProjectDir)../../third_party/fmt/include;$(ProjectDir)../../third_party/sqlite3/include;$(ProjectDir)../../third_party/SQLiteCpp/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>WS2_32.lib;dbghelp.lib;version.lib;shlwapi.lib;gflags_static_debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../third_party/gflags/lib/Debug/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>WS2_32.lib;dbghelp.lib;version.lib;shlwapi.lib;zlib.lib;gflags_static_debug.lib;sqlite3d.lib;SQLiteCppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)../../third_party/zlib/prebuild/windows/x64;$(ProjectDir)../../third_party/gflags/lib/Debug/x64;$(ProjectDir)../../third_party/sqlite3/lib/x64;$(ProjectDir)../../third_party/SQLiteCpp/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -155,6 +155,10 @@
     <ClInclude Include="log\mylog.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="task\task.h" />
+    <ClInclude Include="virus\virus_database_generator.h" />
+    <ClInclude Include="virus\virus.h" />
+    <ClInclude Include="virus\virus_parser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app\main_application.cpp" />
@@ -166,6 +170,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="task\task.cpp" />
+    <ClCompile Include="virus\virus_database_generator.cpp" />
+    <ClCompile Include="virus\virus.cpp" />
+    <ClCompile Include="virus\virus_parser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\project\windows\base\extension\extension.vcxproj">
